--- a/vpn.service
+++ b/vpn.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 WorkingDirectory=/root
-ExecStart=python3 vpn_server.py --server_ip 191.10.8.1 --server_port 446 --hosting_port 445
+ExecStart=/usr/bin/python3 vpn_server.py --server_ip 191.10.10.1 --server_port 446 --hosting_port 445
 Restart=on-failure
 
 [Install]
